--- a/extra-escape/src/components/MainHead.astro
+++ b/extra-escape/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
+	title = 'Viyan Ateaa: Personal Site',
+	description = 'The personal site of Viyan Ateaa',
 } = Astro.props;
 ---
 
