added new bg image, added text for index page and about page

--- a/extra-escape/src/components/Skills.astro
+++ b/extra-escape/src/components/Skills.astro
@@ -1,22 +1,62 @@
 ---
-import Icon from './Icon.astro';
+import Icon from "./Icon.astro";
 ---
 
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
+		<Icon
+			icon="terminal-window"
+			color="var(--accent-regular)"
+			size="2.5rem"
+			gradient
+		/>
 		<h2>Frontend</h2>
-		<p>Building UI component</p>
+		<p>
+			I have strong technical skills in front-end development, which
+			allows me to translate design concepts into functional and visually
+			appealing interfaces. I build UI components using different
+			JavaScript Frameworks such as Angular and StencilJS (web components
+			compiler). I also design inclusively with ARIA roles and semantic
+			HTML to ensure accessibility. Moreover, I have worked with creating
+			Progressive Web Apps (PWAs) to provide app-like experiences for
+			users.
+		</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
+		<Icon
+			icon="trophy"
+			color="var(--accent-regular)"
+			size="2.5rem"
+			gradient
+		/>
 		<h2>UX Design</h2>
-		<p>passion for solving complex problem with user centered</p>
+		<p>
+			I have a deep understanding of the importance of design thinking and
+			placing the user at the center of every decision. This involves
+			empathizing with users, conducting user research, and gathering
+			insights to inform design and development choices. By focusing on
+			user needs, preferences, and pain points, I can create intuitive and
+			meaningful digital experiences that resonate with the target
+			audience.
+		</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
+		<Icon
+			icon="strategy"
+			color="var(--accent-regular)"
+			size="2.5rem"
+			gradient
+		/>
 		<h2>Design system</h2>
-		<p>Experist in design system</p>
+		<p>
+			Experist in creating and maintaining design systems that document
+			and organize design patterns, components, and guidelines which
+			empower team to collaborate effectively and enable faster
+			iterations, leading to a cohesive and harmonious user experience
+			across products. My expertise in crafting design systems is
+			instrumental in delivering exceptional digital experiences that
+			resonate with users and leave a lasting impact on the market.
+		</p>
 	</div>
 </section>
 
