--- a/extra-escape/src/pages/about.astro
+++ b/extra-escape/src/pages/about.astro
@@ -1,15 +1,18 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-import ContactCTA from '../components/ContactCTA.astro';
-import Hero from '../components/Hero.astro';
+import ContactCTA from "../components/ContactCTA.astro";
+import Hero from "../components/Hero.astro";
 ---
 
-<BaseLayout title="About | Viyan Ateaa" description="About Viyan Ateaa Lorem Ipsum">
+<BaseLayout
+	title="About | Viyan Ateaa"
+	description="About Viyan Ateaa Lorem Ipsum"
+>
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="About"
+				title="About me"
 				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
 			>
 				<!-- <img
@@ -24,29 +27,41 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						 
-					</p>
-					<p>
-						 
-					</p>
-					<p>
-						 
+						A passionate Design Technologist and Front-End Developer
+						dedicated to crafting exceptional digital experiences
+						through innovative design systems. With a keen eye for
+						aesthetics and a strong technical background, I strive
+						to bridge the gap between design and development,
+						ensuring seamless and user-centric products. I enjoy
+						spending my time in the design & tech community, and
+						learning more about design, business, and technology.
+						Aside from all that, I enjoy hiking, camping with
+						friends, and trying new food recipes.
 					</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p>
+						As a creative problem-solver with a love for technology,
+						I found my true calling in the world of design and
+						front-end development. My journey began with a burning
+						curiosity for both design and code, leading me to pursue
+						a degree in Master of Science in Interaction & Design
+						from Umeå University. Throughout my academic journey and
+						professional career, I have honed my skills to bring out
+						the best in every digital project I undertake.
+					</p>
 				</div>
 			</section>
-			<section>
+			<!-- <section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
 					<p>Design systems</p>
 					<p>Design systems</p>
 				</div>
-			</section>
+			</section> -->
 		</main>
 
 		<ContactCTA />
