--- a/extra-escape/src/pages/work.astro
+++ b/extra-escape/src/pages/work.astro
@@ -20,8 +20,8 @@ const projects = (await getCollection('work')).sort(
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="My Work"
-				tagline="See my most recent projects below to get an idea of my past experience."
+				title="Selected Work"
+				tagline="Over the years, I've had the privilege of working on a diverse range of projects across various industries. See my most recent projects below to get an idea of my past experience."
 				align="start"
 			/>
 			<Grid variant="offset">
