--- a/extra-escape/src/pages/about.astro
+++ b/extra-escape/src/pages/about.astro
@@ -15,12 +15,12 @@ import Hero from "../components/Hero.astro";
 				title="About me"
 				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
 			>
-				<!-- <img
+				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
-					alt="Jeanine White at work with a colleague"
-				/> -->
+					src="/assets/viyan.jpg"
+					alt="Viyans photo"
+				/>
 			</Hero>
 
 			<section>
