--- a/extra-escape/src/pages/about.astro
+++ b/extra-escape/src/pages/about.astro
@@ -6,122 +6,151 @@ import Hero from "../components/Hero.astro";
 ---
 
 <BaseLayout
-	title="About | Viyan Ateaa"
-	description="About Viyan Ateaa Lorem Ipsum"
+  title="About | Viyan Ateaa"
+  description="About Viyan Ateaa Lorem Ipsum"
 >
-	<div class="stack gap-20">
-		<main class="wrapper about">
-			<Hero
-				title="About me"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
-			>
-				<img
-					width="1553"
-					height="873"
-					src="/assets/viyan.jpg"
-					alt="Viyans photo"
-				/>
-			</Hero>
+  <div class="stack gap-20">
+    <main class="wrapper about">
+      <Hero
+        title="About me"
+        tagline="Thanks for stopping by. Read below to learn more about myself, my background and my skills."
+      >
+        <img
+          width="1553"
+          height="873"
+          src="/assets/viyan.jpg"
+          alt="Viyan Ateaa smiling"
+        />
+      </Hero>
 
-			<section>
-				<h2 class="section-title">Background</h2>
-				<div class="content">
-					<p>
-						A passionate Design Technologist and Front-End Developer
-						dedicated to crafting exceptional digital experiences
-						through innovative design systems. With a keen eye for
-						aesthetics and a strong technical background, I strive
-						to bridge the gap between design and development,
-						ensuring seamless and user-centric products. I enjoy
-						spending my time in the design & tech community, and
-						learning more about design, business, and technology.
-						Aside from all that, I enjoy hiking, camping with
-						friends, and trying new food recipes.
-					</p>
-				</div>
-			</section>
-			<section>
-				<h2 class="section-title">Education</h2>
-				<div class="content">
-					<p>
-						As a creative problem-solver with a love for technology,
-						I found my true calling in the world of design and
-						front-end development. My journey began with a burning
-						curiosity for both design and code, leading me to pursue
-						a degree in Master of Science in Interaction & Design
-						from Umeå University. Throughout my academic journey and
-						professional career, I have honed my skills to bring out
-						the best in every digital project I undertake.
-					</p>
-				</div>
-			</section>
-			<!-- <section>
-				<h2 class="section-title">Skills</h2>
-				<div class="content">
-					<p>Design systems</p>
-					<p>Design systems</p>
-				</div>
-			</section> -->
-		</main>
+      <section>
+        <h2 class="section-title">Background</h2>
+        <div class="content">
+          <p>
+            A passionate Design Technologist and Front-End Developer dedicated
+            to crafting exceptional digital experiences through innovative
+            design systems. With a keen eye for aesthetics and a strong
+            technical background, I strive to bridge the gap between design and
+            development, ensuring seamless and user-centric products. I enjoy
+            spending my time in the design & tech community, and learning more
+            about design, business, and technology. Aside from all that, I enjoy
+            hiking, camping with friends, and trying new food recipes.
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2 class="section-title">Education</h2>
+        <div class="content">
+          <p>
+            As a creative problem-solver with a love for technology, I found my
+            true calling in the world of design and front-end development. My
+            journey began with a burning curiosity for both design and code,
+            leading me to pursue a degree in Master of Science in Interaction &
+            Design from Umeå University. Throughout my academic journey and
+            professional career, I have honed my skills to bring out the best in
+            every digital project I undertake.
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2 class="section-title">Skills</h2>
+        <div class="content">
+          <h5>Design system</h5>
+          <p>
+            Experist in creating and maintaining design systems that document
+            and organize design patterns, components, and guidelines which
+            empower team to collaborate effectively and enable faster
+            iterations, leading to a cohesive and harmonious user experience
+            across products. My expertise in crafting design systems is
+            instrumental in delivering exceptional digital experiences that
+            resonate with users and leave a lasting impact on the market.
+          </p>
+          <br />
+          <h5>Frontend</h5>
+          <p>
+            My expertise in frontend development enables me to convert design
+            concepts into functional and visually appealing interfaces. I
+            specialize in building UI components using different JavaScript
+            Frameworks such as Angular and StencilJS (web components
+            compiler).My design approach prioritizes inclusivity, employing ARIA
+            roles and semantic HTML to ensure accessibility. Additionally, I
+            have worked with creating Progressive Web Apps (PWAs) to provide
+            app-like experiences for users.
+          </p>
+          <br />
+          <h5>UX Design</h5>
+          <p>
+            My deep-rooted commitment to user-centric design is anchored in the
+            principles of design thinking, with a core focus on placing the user
+            at the center of every decision. This entails empathizing with
+            users, conducting thorough user research, and gathering invaluable
+            insights to inform design and development choices. By focusing on
+            user needs, preferences, and pain points, I consistently craft
+            intuitive and meaningful digital experiences that resonate
+            profoundly with the target audience.
+          </p>
+        </div>
+      </section>
+    </main>
 
-		<ContactCTA />
-	</div>
+    <ContactCTA />
+  </div>
 </BaseLayout>
 
 <style>
-	.about {
-		display: flex;
-		flex-direction: column;
-		gap: 3.5rem;
-	}
+  .about {
+    display: flex;
+    flex-direction: column;
+    gap: 3.5rem;
+  }
 
-	img {
-		margin-top: 1.5rem;
-		border-radius: 1.5rem;
-		box-shadow: var(--shadow-md);
-	}
+  img {
+    margin-top: 1.5rem;
+    border-radius: 1.5rem;
+    box-shadow: var(--shadow-md);
+  }
 
-	section {
-		display: flex;
-		flex-direction: column;
-		gap: 0.5rem;
-		color: var(--gray-200);
-	}
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    color: var(--gray-200);
+  }
 
-	.section-title {
-		grid-column-start: 1;
-		font-size: var(--text-xl);
-		color: var(--gray-0);
-	}
+  .section-title {
+    grid-column-start: 1;
+    font-size: var(--text-xl);
+    color: var(--gray-0);
+  }
 
-	.content {
-		grid-column: 2 / 4;
-	}
+  .content {
+    grid-column: 2 / 4;
+  }
 
-	.content :global(a) {
-		text-decoration: 1px solid underline transparent;
-		text-underline-offset: 0.25em;
-		transition: text-decoration-color var(--theme-transition);
-	}
+  .content :global(a) {
+    text-decoration: 1px solid underline transparent;
+    text-underline-offset: 0.25em;
+    transition: text-decoration-color var(--theme-transition);
+  }
 
-	.content :global(a:hover),
-	.content :global(a:focus) {
-		text-decoration-color: currentColor;
-	}
+  .content :global(a:hover),
+  .content :global(a:focus) {
+    text-decoration-color: currentColor;
+  }
 
-	@media (min-width: 50em) {
-		.about {
-			display: grid;
-			grid-template-columns: 1fr 60% 1fr;
-		}
+  @media (min-width: 50em) {
+    .about {
+      display: grid;
+      grid-template-columns: 1fr 60% 1fr;
+    }
 
-		.about > :global(:first-child) {
-			grid-column-start: 2;
-		}
+    .about > :global(:first-child) {
+      grid-column-start: 2;
+    }
 
-		section {
-			display: contents;
-			font-size: var(--text-lg);
-		}
-	}
+    section {
+      display: contents;
+      font-size: var(--text-lg);
+    }
+  }
 </style>
